overflow on about page fix

--- a/scss/aboutContent.scss
+++ b/scss/aboutContent.scss
@@ -1,6 +1,7 @@
 .about {
   margin-left: 1em;
   margin-right: 1em;
+  width: auto;
 
   &__title {
 
@@ -17,6 +18,7 @@
 
   &__text {
     margin-top: 1em;
+
   }
 
   &__quote {
